err/django-datatrans.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/datatrans'...
Listing './lib/python3.5/site-packages/datatrans/locale'...
Listing './lib/python3.5/site-packages/datatrans/locale/fr'...
Listing './lib/python3.5/site-packages/datatrans/locale/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/datatrans/locale/nl'...
Listing './lib/python3.5/site-packages/datatrans/locale/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/datatrans/management'...
Listing './lib/python3.5/site-packages/datatrans/management/commands'...
Compiling './lib/python3.5/site-packages/datatrans/management/commands/deleteduplicates.py'...
***   File "./lib/python3.5/site-packages/datatrans/management/commands/deleteduplicates.py", line 21
    print '  Deleting duplicates from datatrans_keyvalue table'
                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/datatrans/migrations'...
Compiling './lib/python3.5/site-packages/datatrans/migrations/0001a_remove_duplicates.py'...
***   File "./lib/python3.5/site-packages/datatrans/migrations/0001a_remove_duplicates.py", line 32
    print 'Deleting KeyValue', kv.id
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatrans/migrations/0003_auto__add_field_keyvalue_content_type__add_field_keyvalue_object_id__a.py'...
***   File "./lib/python3.5/site-packages/datatrans/migrations/0003_auto__add_field_keyvalue_content_type__add_field_keyvalue_object_id__a.py", line 15
    print "  WARNING: current index didn't exist"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/datatrans/migrations/0006_auto__chg_field_keyvalue_field__del_unique_keyvalue_language_digest__a.py'...
***   File "./lib/python3.5/site-packages/datatrans/migrations/0006_auto__chg_field_keyvalue_field__del_unique_keyvalue_language_digest__a.py", line 13
    print "  WARNING: current index didn't exist"
                                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/datatrans/templates'...
Listing './lib/python3.5/site-packages/datatrans/templates/datatrans'...
Listing './lib/python3.5/site-packages/django_datatrans-0.1.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/test_project'...
Listing './lib/python3.5/site-packages/test_project/testapp'...
Compiling './lib/python3.5/site-packages/test_project/testapp/utils.py'...
***   File "./lib/python3.5/site-packages/test_project/testapp/utils.py", line 16
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './share'...
Listing './share/python-wheels'...
